--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
-version: '3'
+version: "3"
 services:
   app:
-    image: decidim/decidim:0.26.0
+    image: decidim/decidim
     volumes:
       - .:/app
       - bundle:/usr/local/bundle
       - node_modules:/app/node_modules
     environment:
       - PORT=3000
+      - POSTGRES_DB=decidim_torino_development
       - DATABASE_HOST=pg
       - DATABASE_USERNAME=postgres
       - RAILS_ENV=development
@@ -20,6 +21,10 @@ services:
     image: postgres
     volumes:
       - pg-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=decidim_torino_development
+      - POSTGRES_USER=postgres
+      - POSTGRES_HOST_AUTH_METHOD=trust
 volumes:
   node_modules: {}
   bundle: {}
