Added initiatives (not completed)

--- a/public/decidim-packs/manifest.json
+++ b/public/decidim-packs/manifest.json
@@ -194,6 +194,13 @@
         ]
       }
     },
+    "decidim_initiatives": {
+      "assets": {
+        "js": [
+          "/decidim-packs/js/decidim_initiatives.js"
+        ]
+      }
+    },
     "decidim_admin": {
       "assets": {
         "js": [
